[package]
name = "queque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
libc = "0.2"
tokio = { version = "1", default-features = false, features = [
    "net",
    "rt-multi-thread",
    "sync",
    "macros"
] }
tokio-util = { version = "0.6", default-features = false, features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "net",
    "rt-multi-thread",
    "sync",
    "time",
    "macros"
] }
